--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -1,5 +1,5 @@
 body {
-    background: url('background.png');
+    background: url('../images/background.png');
     width: 100%;
     height: 100%;
     text-align: center;
