--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -6,7 +6,12 @@ body {
     overflow:hidden;
 }
 
-#name {
+
+/*********\
+* CONTENT *
+\*********/
+
+#content {
     width:500px;
     height:300px;
     position:absolute;
@@ -14,19 +19,38 @@ body {
     top:45%;
     margin:-150px 0 0 -250px;
     font-family: avenir-web, Avenir;
+}
+
+#content_name {
     color: #fff;
     font-size: 40px;
     font-weight: normal;
+    padding-top: 0.5em;
 }
 
-#name div {
-    padding-top: 2.5%;
-}
-
-#name span a {
-    font-size: 20px;
+#content_description {
+    padding-top: 0.5em;
+    font-size: 1.4em;
     color: #ccc;
 }
+
+#content_description a {
+    color: #ccc;
+}
+
+
+/**********\
+* METADATA *
+\**********/
+
+#metadata {
+    display: none;
+}
+
+
+/*******\
+* ICONS *
+\*******/
 
 #icons {
     padding-top: 1em;
@@ -37,22 +61,17 @@ body {
     bottom: 0;
 }
 
-.fa {
+#icons .fa {
     font-size: 2em;
     color:#555;
 }
 
-.fa:hover {
+#icons .fa:hover {
     color:#fff;
     text-shadow: #c0c0c0 0px 0px 5px;
 }
 
-.tooltip {
-    font-family: Avenir;
-    font-size: 1em;
-}
-
-a, a:hover {
+#icons a, #icons a:hover {
     text-decoration: none;
 }
 
