removed skype and added instagram

--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -166,6 +166,10 @@ body {
     background-color: #ff9900;
 }
 
+.fa-instagram:hover {
+    background-color: #c13584;
+}
+
 #circle a, #circle a:hover {
     text-decoration: none;
 }
